--- a/software/openvisualizer/bin/openVisualizerApp/web_files/templates/navbar.tmpl
+++ b/software/openvisualizer/bin/openVisualizerApp/web_files/templates/navbar.tmpl
@@ -54,7 +54,7 @@
 
                 <li><a href="/eventBus"><i class="fa fa-retweet"></i><span class="hidden-tablet"> Event Bus</span></a></li>
 
-                <li><a href="/topology"><i class="fa fa-tasks"></i><span class="hidden-tablet"> Topology</span></a></li>
+                <li><a href="/map"><i class="fa fa-map-marker"></i><span class="hidden-tablet"> Map</span></a></li>
 
                 <li><a href="/routing"><i class="fa fa-sitemap"></i><span class="hidden-tablet"> Routing</span></a></li>
 
