SW-160. Rename "Routing" -> "Topology"

--- a/software/openvisualizer/bin/openVisualizerApp/web_files/templates/navbar.tmpl
+++ b/software/openvisualizer/bin/openVisualizerApp/web_files/templates/navbar.tmpl
@@ -56,7 +56,7 @@
 
                 <li><a href="/map"><i class="fa fa-map-marker"></i><span class="hidden-tablet"> Map</span></a></li>
 
-                <li><a href="/routing"><i class="fa fa-sitemap"></i><span class="hidden-tablet"> Routing</span></a></li>
+                <li><a href="/topology"><i class="fa fa-sitemap"></i><span class="hidden-tablet"> Topology</span></a></li>
 
                 <li><a href="http://www.openwsn.org/" target="_blank"><i class="fa fa-book"></i><span class="hidden-tablet"> Documentation</span></a></li>
                 
