--- a/software/openvisualizer/bin/openVisualizerApp/web_files/templates/topology.tmpl
+++ b/software/openvisualizer/bin/openVisualizerApp/web_files/templates/topology.tmpl
@@ -13,7 +13,7 @@
 			<div id="page-wrapper">
 	            <div class="row">
 	                <div class="col-lg-12">
-	                    <h1 class="page-header">Routing</h1>
+	                    <h1 class="page-header">Topology</h1>
 	                </div>
 	            </div>
 
@@ -22,7 +22,7 @@
 			        $( document ).ready(function() {
 			            $.ajax({
 			                    dataType: "json",
-			                    url: "/routing/dag",
+			                    url: "/topology/dag",
 			                    success: updateForData,
 			                    error: errorOnAjax
 			                });
@@ -42,7 +42,7 @@
 			            
 			            if (hasJson) {
 			                if(json.states.length > 0 && json.edges.length > 0) {
-			                    $("#routing_status").text("");
+			                    $("#topology_status").text("");
 			                    var states = json.states;
 			                    var edges  = json.edges;
 			                    var g = new dagreD3.Digraph();
@@ -59,14 +59,14 @@
 			                    n_dots++;
 			                    if (n_dots > 3)
 			                        n_dots = 1;
-			                    $("#routing_status").text("Waiting routing information " + dots);
+			                    $("#topology_status").text("Waiting topology information " + dots);
 			                }
 			            }
 			            
 			            timeoutId = setTimeout(function() {
 			                $.ajax({
 			                    dataType: "json",
-			                    url: "/routing/dag",
+			                    url: "/topology/dag",
 			                    success: updateForData,
 			                    error: errorOnAjax
 			                });
@@ -83,8 +83,8 @@
 
 	            <div class="row">
 	                <div class="col-lg-12">
-	                	<h5>Current RPL Routing</h5>
-	                	<div class="rel_value_fld" id="routing_status"></div>
+	                	<h5>Current RPL Topology</h5>
+	                	<div class="rel_value_fld" id="topology_status"></div>
 				        <svg id="svg" width=400 height=800>
 				            <g transform="translate(20, 20)"/>
 				        </svg>
